# ansible-role-deploy-with-docker-compose

./: .ansible-lint  .gitignore  AGENTS.md  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: run_molecule.yml
defaults/: main.yml
docs/: design.md
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  requirements.yml  verify.yml
molecule/default/files/: ignore.conf
molecule/default/templates/: default.conf.j2  docker-compose.yml.j2  proxy.conf.j2
molecule/default/vars/: all.yml
tasks/: assert.yml  main.yml  prepare.yml  set_facts.yml
